--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,15 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+body {
+  background-color: #EEE2DC;
+}
+
+h1, h2, h3, h4 {
+  color: #AC3B61;
+}
+
+p {
+  color: #686868;
+}
