--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,19 @@
-<h1>Welcome on my website</h1>
-<p>Please be my guest</p>
+<nav>
+  <ul>
+    <li>Qui je suis ?</li>
+    <li>Compétences</li>
+    <li>Portfolio</li>
+    <li>Contactez-moi</li>
+  </ul>
+</nav>
+<div class="banner">
+  <h1>Développeur web front-end</h1>
+  <h4>Le code est ma passion, rendre votre application attirante est mon devoir</h4>
+</div>
+<div class="main-content container">
+  <h2>Salut ! Je suis Julien, ravi de te rencontrer.</h2>
+  <p>
+    Après deux années à faire de l'intégration de site sur Wordpress et à être en charge de l'optimisation du SEO d'une start-up j'ai décidé de me lancer dans le grand bain : je voulais devenir développeur front-end.
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos eum aut veniam quasi iusto, rerum distinctio, tenetur quibusdam repellat harum facilis possimus deleniti nemo inventore veritatis in nostrum dolorem numquam?
+  </p>
+</div>
