--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,3 +12,10 @@ nav ul {
   justify-content: space-around;
   padding-left: 0px !important;
 }
+
+#contact {
+  background-color: #AC3B61;
+  color: white;
+  border-radius: 10px;
+  padding: 10px 30px;
+}
