--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,12 +3,14 @@
     <li>Qui je suis ?</li>
     <li>Compétences</li>
     <li>Portfolio</li>
-    <li>Contactez-moi</li>
+    <li id="contact">Contactez-moi</li>
   </ul>
 </nav>
-<div class="banner">
+<div class="banner typewriter">
   <h1>Développeur web front-end</h1>
   <h4>Le code est ma passion, rendre votre application attirante est mon devoir</h4>
+  <img src="https://res.cloudinary.com/dwv60m21t/image/upload/v1614877828/banner-my-website_ppsdjh.png" alt="My banner">
+  <hr>
 </div>
 <div class="main-content container">
   <h2>Salut ! Je suis Julien, ravi de te rencontrer.</h2>
