--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <nav>
   <ul>
-    <li>Qui je suis ?</li>
-    <li>Compétences</li>
-    <li>Portfolio</li>
+    <li class="regular-menu-item">Qui je suis ?</li>
+    <li class="regular-menu-item">Compétences</li>
+    <li class="regular-menu-item">Portfolio</li>
     <li id="contact">Contactez-moi</li>
   </ul>
 </nav>
@@ -15,7 +15,8 @@
 <div class="main-content container">
   <h2>Salut ! Je suis Julien, ravi de te rencontrer.</h2>
   <p>
-    Après deux années à faire de l'intégration de site sur Wordpress et à être en charge de l'optimisation du SEO d'une start-up j'ai décidé de me lancer dans le grand bain : je voulais devenir développeur front-end.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ipsa voluptatem quia possimus autem tenetur ducimus minima tempore illo. Assumenda quis quibusdam commodi eum distinctio, rerum quasi quos quaerat eligendi.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, eos optio impedit magni ullam illo doloribus omnis iste dolorum voluptatem qui, atque nesciunt culpa, saepe possimus rerum recusandae rem numquam?
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos eum aut veniam quasi iusto, rerum distinctio, tenetur quibusdam repellat harum facilis possimus deleniti nemo inventore veritatis in nostrum dolorem numquam?
   </p>
 </div>
