JS not working yet

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,12 @@ h1, h2, h3, h4 {
 p {
   color: #686868;
 }
+
+a:hover {
+  text-decoration: none;
+  color: #AC3B61;
+}
+
+a {
+  color: black;
+}
