--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,13 @@
 <nav>
-  <ul>
-    <li class="regular-menu-item">Qui je suis ?</li>
-    <li class="regular-menu-item">Compétences</li>
-    <li class="regular-menu-item">Portfolio</li>
-    <li id="contact">Contactez-moi</li>
+  <div id="logo">
+    <p>JulienGarcia</p>
+  </div>
+  <ul id="menu">
+    <li class="regular-menu-item active"><a href="#">Accueil</a></li>
+    <li class="regular-menu-item"><a href="#">Qui je suis ?</a></li>
+    <li class="regular-menu-item"><a href="#">Compétences</a></li>
+    <li class="regular-menu-item"><a href="#">Portfolio</a></li>
+    <li id="contact">Me contacter</li>
   </ul>
 </nav>
 <div class="banner typewriter">
