active class menu works

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,10 +3,10 @@
     <p>JulienGarcia</p>
   </div>
   <ul id="menu">
-    <li class="regular-menu-item active"><a href="#">Accueil</a></li>
-    <li class="regular-menu-item"><a href="#">Qui je suis ?</a></li>
-    <li class="regular-menu-item"><a href="#">Compétences</a></li>
-    <li class="regular-menu-item"><a href="#">Portfolio</a></li>
+    <li><a href="#" class="active">Accueil</a></li>
+    <li><a href="#test">Qui je suis ?</a></li>
+    <li><a href="#">Compétences</a></li>
+    <li><a href="#">Portfolio</a></li>
     <li id="contact">Me contacter</li>
   </ul>
 </nav>
@@ -16,7 +16,7 @@
   <img src="https://res.cloudinary.com/dwv60m21t/image/upload/v1614877828/banner-my-website_ppsdjh.png" alt="My banner">
   <hr>
 </div>
-<div class="main-content container">
+<div id="test" class="main-content container">
   <h2>Salut ! Je suis Julien, ravi de te rencontrer.</h2>
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ipsa voluptatem quia possimus autem tenetur ducimus minima tempore illo. Assumenda quis quibusdam commodi eum distinctio, rerum quasi quos quaerat eligendi.
