--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,20 @@
 // Specific CSS for your home-page
-.main-content {
+.presentation-section {
   text-align: center;
   padding-top: 60px;
+  height: 500px;
   background-color: white;
+  padding: 60px;
+  position: absolute;
+}
+
+.presentation-section h2 {
+  padding-bottom: 15px;
+}
+
+.skills-section {
+  padding-top: 60px;
+  z-index: 1;
+  position: relative;
+  top: 340px;
 }
