--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   </div>
   <ul id="menu">
     <li><a href="#" class="active">Accueil</a></li>
-    <li><a href="#test">Qui je suis ?</a></li>
+    <li><a href="#">Qui je suis ?</a></li>
     <li><a href="#">Compétences</a></li>
     <li><a href="#">Portfolio</a></li>
     <li id="contact">Me contacter</li>
@@ -16,11 +16,36 @@
   <img src="https://res.cloudinary.com/dwv60m21t/image/upload/v1614877828/banner-my-website_ppsdjh.png" alt="My banner">
   <hr>
 </div>
-<div id="test" class="main-content container">
-  <h2>Salut ! Je suis Julien, ravi de te rencontrer.</h2>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ipsa voluptatem quia possimus autem tenetur ducimus minima tempore illo. Assumenda quis quibusdam commodi eum distinctio, rerum quasi quos quaerat eligendi.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, eos optio impedit magni ullam illo doloribus omnis iste dolorum voluptatem qui, atque nesciunt culpa, saepe possimus rerum recusandae rem numquam?
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos eum aut veniam quasi iusto, rerum distinctio, tenetur quibusdam repellat harum facilis possimus deleniti nemo inventore veritatis in nostrum dolorem numquam?
-  </p>
+<div>
+  <div class="presentation-section">
+    <h2>Salut ! Je suis Julien, ravi de te rencontrer.</h2>
+    <p>
+      Je débute mon aventure en tant que développeur front-end et freelance.
+    </p>
+    <p>
+      Avant de devenir développeur web je faisais déjà de l'intégration de site web en passant par le CMS Wordpress et de la rédaction de contenu SEO-friendly.<br>
+      J'ai réalisé plusieurs projets en tant que développeur front-end, que ce soit seul ou en collaboration avec une équipe de plusieurs développeurs. Vous pouvez retrouver ces projets dans mon portfolio plus bas.
+      De part ma formation en Marketing Digital (Bachelor et Master) j'ai une approche très accès produit et optimisation de l'expérience utilisateur.<br>
+      Enfin, je suis quelqu'un de très curieux et j'aime travailler sur le moindre détail.
+    </p>
+  </div>
+  <div class="skills-section container">
+    <div class="cards">
+      <div class="card">
+        <img src="" alt="">
+        <h2>Développeur Vue.js</h2>
+        <p>Je suis développeur front</p>
+      </div>
+      <div class="card">
+        <img src="" alt="">
+        <h2>Développeur front-end</h2>
+        <p>Je suis développeur d'application Vue.js</p>
+      </div>
+      <div class="card">
+        <img src="" alt="">
+        <h2>Intégrateur Wordpress / SEO Content Writer</h2>
+        <p>Je suis intégrateur Wordpress</p>
+      </div>
+    </div>
+  </div>
 </div>
