--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,18 @@
   </head>
 
   <body>
+    <nav>
+      <div id="logo">
+        <p>JulienGarcia</p>
+      </div>
+      <ul id="menu">
+        <li><a href="#" class="active">Accueil</a></li>
+        <li><a href="#">Qui je suis ?</a></li>
+        <li><a href="#">Compétences</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li id="contact">Me contacter</li>
+      </ul>
+    </nav>
     <%= yield %>
   </body>
 </html>
