--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,3 @@
-<nav>
-  <div id="logo">
-    <p>JulienGarcia</p>
-  </div>
-  <ul id="menu">
-    <li><a href="#" class="active">Accueil</a></li>
-    <li><a href="#">Qui je suis ?</a></li>
-    <li><a href="#">Compétences</a></li>
-    <li><a href="#">Portfolio</a></li>
-    <li id="contact">Me contacter</li>
-  </ul>
-</nav>
 <div class="banner typewriter">
   <h1>Développeur web front-end</h1>
   <h4>Le code est ma passion, rendre votre application attirante est mon devoir</h4>
@@ -33,17 +21,27 @@
     <div class="cards">
       <div class="card">
         <img src="" alt="">
-        <h2>Développeur Vue.js</h2>
-        <p>Je suis développeur front</p>
+        <h3>Développeur Vue.js</h3>
+        <p>Je suis développeur Vue.js</p>
+        <h4></h4>
       </div>
       <div class="card">
         <img src="" alt="">
-        <h2>Développeur front-end</h2>
+        <h3>Développeur front-end</h3>
         <p>Je suis développeur d'application Vue.js</p>
+        <h4>Langages</h4>
+        <ul>
+          <li>Javascript Vanilla</li>
+          <li>HTML</li>
+          <li>CSS (SCSS)</li>
+          <li>Bootstrap</li>
+          <li>Tailwind</li>
+        </ul>
+
       </div>
       <div class="card">
         <img src="" alt="">
-        <h2>Intégrateur Wordpress / SEO Content Writer</h2>
+        <h3>Intégrateur Wordpress</h3>
         <p>Je suis intégrateur Wordpress</p>
       </div>
     </div>
