core section done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,10 @@
         <p>JulienGarcia</p>
       </div>
       <ul id="menu">
-        <li><a href="#" class="active">Accueil</a></li>
+        <li><a href="#accueil" class="active">Accueil</a></li>
         <li><a href="#">Qui je suis ?</a></li>
-        <li><a href="#">Compétences</a></li>
-        <li><a href="#">Portfolio</a></li>
+        <li><a href="#compétences">Compétences</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
         <li id="contact">Me contacter</li>
       </ul>
     </nav>
