--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner typewriter">
+<div id="accueil" class="banner typewriter">
   <h1>Développeur web front-end</h1>
   <h4>Le code est ma passion, rendre votre application attirante est mon devoir</h4>
   <img src="https://res.cloudinary.com/dwv60m21t/image/upload/v1614877828/banner-my-website_ppsdjh.png" alt="My banner">
@@ -17,32 +17,40 @@
       Enfin, je suis quelqu'un de très curieux et j'aime travailler sur le moindre détail.
     </p>
   </div>
-  <div class="skills-section container">
+  <div id="compétences" class="skills-section container">
     <div class="cards">
       <div class="card">
-        <img src="" alt="">
-        <h3>Développeur Vue.js</h3>
-        <p>Je suis développeur Vue.js</p>
-        <h4></h4>
-      </div>
-      <div class="card">
-        <img src="" alt="">
+        <i class="fas fa-code"></i>
         <h3>Développeur front-end</h3>
         <p>Je suis développeur d'application Vue.js</p>
         <h4>Langages</h4>
-        <ul>
-          <li>Javascript Vanilla</li>
-          <li>HTML</li>
-          <li>CSS (SCSS)</li>
-          <li>Bootstrap</li>
-          <li>Tailwind</li>
-        </ul>
-
+        <p>Javascript Vanilla</p>
+        <p>HTML</p>
+        <p>CSS (SCSS)</p>
+        <p>Bootstrap</p>
+        <p>Tailwind</p>
       </div>
       <div class="card">
-        <img src="" alt="">
-        <h3>Intégrateur Wordpress</h3>
-        <p>Je suis intégrateur Wordpress</p>
+        <i class="fas fa-code"></i>
+        <h3>Développeur front-end</h3>
+        <p>Je suis développeur d'application Vue.js</p>
+        <h4>Langages</h4>
+        <p>Javascript Vanilla</p>
+        <p>HTML</p>
+        <p>CSS (SCSS)</p>
+        <p>Bootstrap</p>
+        <p>Tailwind</p>
+      </div>
+      <div class="card">
+        <i class="fas fa-code"></i>
+        <h3>Développeur front-end</h3>
+        <p>Je suis développeur d'application Vue.js</p>
+        <h4>Langages</h4>
+        <p>Javascript Vanilla</p>
+        <p>HTML</p>
+        <p>CSS (SCSS)</p>
+        <p>Bootstrap</p>
+        <p>Tailwind</p>
       </div>
     </div>
   </div>
