--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,4 +54,14 @@
       </div>
     </div>
   </div>
+  <div id="portfolio" class="portfolio-section container">
+    <h2>Mes projets réalisés</h2>
+    <div class="card-projects">
+      <div class="card-project">
+        <h4>Projet</h4>
+        <p>Un peu de texte ici</p>
+        <p class="btn btn-primary">Voir le projet</p>
+      </div>
+    </div>
+  </div>
 </div>
