--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,6 +62,16 @@
         <p>Un peu de texte ici</p>
         <p class="btn btn-primary">Voir le projet</p>
       </div>
+      <div class="card-project">
+        <h4>Projet</h4>
+        <p>Un peu de texte ici</p>
+        <p class="btn btn-primary">Voir le projet</p>
+      </div>
+      <div class="card-project">
+        <h4>Projet</h4>
+        <p>Un peu de texte ici</p>
+        <p class="btn btn-primary">Voir le projet</p>
+      </div>
     </div>
   </div>
 </div>
