--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -32,7 +32,9 @@ ul {
 
 .card-project {
   background-color: white;
-  box-shadow: 8px 8px 12px white;
+  box-shadow: 8px 8px 12px grey;
+  border-radius: 10px;
+  padding: 20px;
   height: 300px;
   width: 30%;
 }
