--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   <hr>
 </div>
 <div>
-  <div class="presentation-section">
+  <div id="qui-suis-je-?" class="presentation-section">
     <h2>Salut ! Je suis Julien, ravi de te rencontrer.</h2>
     <p>
       Je débute mon aventure en tant que développeur front-end et freelance.
