--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       </div>
       <ul id="menu">
         <li><a href="#accueil" class="active">Accueil</a></li>
-        <li><a href="#">Qui je suis ?</a></li>
+        <li><a href="#qui-suis-je-?">Qui-suis-je ?</a></li>
         <li><a href="#compétences">Compétences</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li id="contact">Me contacter</li>
