--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,9 +8,6 @@
   <div id="qui-suis-je-?" class="presentation-section">
     <h2>Salut ! Je suis Julien, ravi de te rencontrer.</h2>
     <p>
-      Je débute mon aventure en tant que développeur front-end et freelance.
-    </p>
-    <p>
       Avant de devenir développeur web je faisais déjà de l'intégration de site web en passant par le CMS Wordpress et de la rédaction de contenu SEO-friendly.<br>
       J'ai réalisé plusieurs projets en tant que développeur front-end, que ce soit seul ou en collaboration avec une équipe de plusieurs développeurs. Vous pouvez retrouver ces projets dans mon portfolio plus bas.
       De part ma formation en Marketing Digital (Bachelor et Master) j'ai une approche très accès produit et optimisation de l'expérience utilisateur.<br>
@@ -19,38 +16,33 @@
   </div>
   <div id="compétences" class="skills-section container">
     <div class="cards">
-      <div class="card">
+      <div class="card" id="left-card">
         <i class="fas fa-code"></i>
-        <h3>Développeur front-end</h3>
+        <h3>Développeur Vue.js</h3>
         <p>Je suis développeur d'application Vue.js</p>
         <h4>Langages</h4>
-        <p>Javascript Vanilla</p>
-        <p>HTML</p>
-        <p>CSS (SCSS)</p>
-        <p>Bootstrap</p>
-        <p>Tailwind</p>
+        Javascript Vanilla, HTML, CSS (SCSS), Bootstrap, Tailwind
       </div>
       <div class="card">
         <i class="fas fa-code"></i>
         <h3>Développeur front-end</h3>
-        <p>Je suis développeur d'application Vue.js</p>
-        <h4>Langages</h4>
-        <p>Javascript Vanilla</p>
-        <p>HTML</p>
-        <p>CSS (SCSS)</p>
+        <p>J'aime développer from stratch et amener de nouvelles idées.</p>
+        <h4>Les langages que je parle</h4>
+        Javascript Vanilla, HTML, CSS (SCSS), Bootstrap, Tailwind
+        <h4>Outils que j'utilise</h4>
         <p>Bootstrap</p>
         <p>Tailwind</p>
+        <p>Github</p>
+        <p>Git</p>
+        <p>Terminal</p>
+        <p>Heroku</p>
       </div>
-      <div class="card">
+      <div class="card" id="right-card">
         <i class="fas fa-code"></i>
         <h3>Développeur front-end</h3>
         <p>Je suis développeur d'application Vue.js</p>
         <h4>Langages</h4>
-        <p>Javascript Vanilla</p>
-        <p>HTML</p>
-        <p>CSS (SCSS)</p>
-        <p>Bootstrap</p>
-        <p>Tailwind</p>
+        Javascript Vanilla, HTML, CSS (SCSS), Bootstrap, Tailwind
       </div>
     </div>
   </div>
